--- a/Kursova/Kursova/Kursova.Android/Kursova.Android.csproj
+++ b/Kursova/Kursova/Kursova.Android/Kursova.Android.csproj
@@ -111,5 +111,8 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable-hdpi\activity.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable-hdpi\x.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
