--- a/Kursova/Kursova/Kursova/Kursova.csproj
+++ b/Kursova/Kursova/Kursova/Kursova.csproj
@@ -5,20 +5,26 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Prism.Plugin.Popups" Version="7.2.0.1046" />
+    <PackageReference Include="Rg.Plugins.Popup" Version="2.0.0.2" />
     <PackageReference Include="Xamarin.Forms" Version="4.5.0.657" />
     <PackageReference Include="Prism.DryIoc.Forms" Version="7.2.0.1367" />
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Update="Controls\CustomCheckBox.xaml">
+    <EmbeddedResource Update="Views\ActivitiesPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
-    <EmbeddedResource Update="Views\ActivitiesPage.xaml">
+    <EmbeddedResource Update="Views\ActivityCreationPopupPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Views\SlideMenuPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Controls\" />
   </ItemGroup>
 
 </Project>
