--- a/Kursova/Kursova/Kursova/Kursova.csproj
+++ b/Kursova/Kursova/Kursova/Kursova.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="Prism.Plugin.Popups" Version="7.2.0.1046" />
     <PackageReference Include="Rg.Plugins.Popup" Version="2.0.0.2" />
+    <PackageReference Include="sqlite-net-pcl" Version="1.6.292" />
     <PackageReference Include="Xamarin.Forms" Version="4.5.0.657" />
     <PackageReference Include="Prism.DryIoc.Forms" Version="7.2.0.1367" />
   </ItemGroup>
