--- a/Kursova/Kursova/Kursova/Kursova.csproj
+++ b/Kursova/Kursova/Kursova/Kursova.csproj
@@ -19,6 +19,9 @@
     <EmbeddedResource Update="Views\ActivityCreationPopupPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\MainContentPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\SelectedActivityPopupPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
