--- a/Kursova/Kursova/Kursova/Kursova.csproj
+++ b/Kursova/Kursova/Kursova/Kursova.csproj
@@ -15,6 +15,9 @@
     <EmbeddedResource Update="Views\ActivitiesPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\ActivityCompletingPopupPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\ActivityCreationPopupPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
